resources/open5gcore/open5gcore-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: open5gcore-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: open5gcore
spec:
  hosts:
  - "*"
  gateways:
  - open5gcore-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: open5gs-webui
        port:
          number: 80
